@@ -1,3 +1,9 @@
+2012-05-12  Tobias Burnus  <burnus@net-b.de>
+
+	PR fortran/53310
+	* intrinsics/eoshift2.c (eoshift2): Do not leak
+	memory by allocating it in the loop.
+
 2011-08-30  Thomas Koenig  <tkoenig@gcc.gnu.org>
 
 	Backport from trunk
